Seshat (#100)
* Seshat

Charting the stars, the rhythms and the causality of such.

* lol.

continue, not break you idiot, you moron, you aqua maroon

* whoops ;)

* fix a couple of issues

- Parameters for exp delay policies explicitly defaulted in params
- Allocate ye PRNG once in the sql state machine
- Fix delay logic duration calc in the DS

* metrics for reassemblies.  Fix metric sampling site

* minor cleanup

* my nemesis

* amp logging on lifecycle testing

some cleanup on View

* just inc the chkpt blocksize until I get this fixed

* trace session

* refactor fireflies to eliminate identity, shift info to Note

Note now contains:
- host
- port
- event coordinates

Signing the note is the key indicated by the coordinates of the note.

This folds in the functionality previously supplied by identity,
simplifying fireflies back to the original formulation. Key rotation is
accomplished by new event coordinates, which requires a note of a new
epoch.

* fix activate/offline logic in context. take churn test to 0.

remove on/offline metrics in FF

* use histograms for comm structure metrics.

use 5ms gossip for faster testing.

* some cleanup. don't use netty-shaded as it has no source

* use gossip of 10 ms

* 50 ms gossip on restart. don't warn when no active successors on ring

* don't be silly

* 50 ms it is, then

* better ring hash management n' such

RoundScheduler now uses a full "round o ticks" for every delayRound
indicated in the timer.

RoundScheduler now represents # of ticks, not number of rounds.

* refactor to remove multiple regenerate nonsense in the updateAndGet

* use histograms for ethereal comm structs metrics

* use histograms for rbc comm struct metrics

* SignedViewChange observations for consensus view membership

* shun the non believer, Charlie. SHUUUUUUUUUUUUUUUUN!

* moar

* first bare bones view election!

Does not install the view, but d*mn, it actual